[package]
name = "nft-snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "0.17.0", features = ["ws", "openssl", "abigen"] }
eyre = "0.6.8"
features = "0.10.0"
futures = "0.3.24"
serde = "1.0.144"
tokio = { version = "1.20.1", features = ["time"] }
